project loading stuff

--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,7 @@
 <html>
-  <head></head>
+  
+  <head>
+      <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  </head>
   <body></body>
 </html>
